modified:   biblia.latex

--- a/biblia/biblia.latex
+++ b/biblia/biblia.latex
@@ -82,30 +82,30 @@ petvarpodans, reptilins, i furopans fames pro enosóm ardim}. Da but tosme.}
 da visom reptilim fames pro enosjo ardim. Da vevidet Divos jod vesu.}
 
 \v{26}{Toives vevept Divos: \qt{Deníme manum pro nosjam iconam e iveman, da
-potíanto úper pistisu maries, i úper avisu dives, i úper pesvi, i úper visi
-jehaní, i úper visosu reptilisu dragomnosu ana fedomam}.}
+potíanto úper pistisu maries, i úper avisu dives, i úper pesvi, i úper visosmi
+jehaní, i úper visoisu reptilisu dragomnosu ana fedomam}.}
 \v{27}{Sep dedenát Divos manum. Pro iconam e iveman Divosjo enons dedenát.
 Virom i benam dedenát enons.}
 \v{28}{Vesuveverdíet enons: \qt{Alojanto i anapelvíanto. Pleníete fedomam i
 enam uperpotíete. Potíete úper pistisu maries, i úper avisu dives, i úper
-visi pesvi, i úper visi jehaní, i úper visosu reptilisu dragomnosu ana
+visi pesvi, i úper visosmi jehaní, i úper visoisu reptilisu dragomnosu ana
 fedomam}.}
 
 \v{29}{Toives vevept Divos: «Vid, usmi dedóm visam grontam sugontam seman
-úper visi jehaní, da visom doru dont pelmó som semenfi en soi. Jenti estin
+úper visosmi jehaní, da viso doru dont pelmó som semenfi en soi. Jenti estin
 baita usmi,}
-\v{30}{i visomos furopimos fames, i visamos avimos dives, i visomos
+\v{30}{i visoimos furopimos fames, i visamos avimos dives, i visoimos
 reptilimos som bivonte psyche dragomnomos ana fedomam. Visom grontam baite».
 Da but tosme.}
 
-\v{31}{Sep vevidet Divos visom jod dedenát, da vevidet jod pelviste vesu.
+\v{31}{Sep vevidet Divos viso jod dedenát, da vevidet jod pelviste vesu.
 Set-pe veksperos, set-pe ausós. But svektos din.}
 
 \v{2:1}{Sep trosberomnoi djus, fedóm, i visa jehania.}
-\v{2}{Trosbeferet Divos Enosjo verda septamosjo dines, de atisestat apo visomos
+\v{2}{Trosbeferet Divos Enosjo verda septamosjo dines, de atisestat apo visoimos
 Enosjo verdomos.}
 \v{3}{Vesuveverdíet Divos septamom dinam, i enom sesvenjíet, joimos ana tosmi
-dini trosbeferet apo visomos Enosjo verdomos.}
+dini trosbeferet apo visoimos Enosjo verdomos.}
 
 
 \subsubsection{Adám i Eva}
@@ -115,9 +115,12 @@ dedenát Divos djum i fedomam,}
 \v{5}{i visom grontam adrosjo, joteros nespe dedenáto ana fami, i visom
 grontam, joteros nespe uperbefereto, dégar ne but sesontíonts anfrom ana
 fedomam, i ne manves jo vardjoit fedomam.}
-\v{6}{Nu brevan uperit ud fames, i vedenjet visom pretiops fames.}
+\v{6}{Nu brevan uperit ud fames, i vedenjet viso pretiops fames.}
 \v{7}{Toives Divos atifedestríet manum apo fedomes. Nenumenjet en enosjo
 pretiops, i bújetor viros en bivontam psycham.}
+
+\v{8}{Toives sesamenjet Potis Divos paradísom en Edemi ana austi, da sesatjet
+virom todi.}
 
 %\biblebook{Udbastia}
 %\biblebook{Levitiskom}
