modified:   biblia/biblia.pdf modified:   dictionary/content.latex modified:   dictionary/dictionary.pdf

--- a/dictionary/content.latex
+++ b/dictionary/content.latex
@@ -702,6 +702,10 @@
 		\key{apo.} {\footnotesize (From PIE \ipa{*h₂epó}).} prep. (+abl) off, away, from.
 	
 
+	\key{apobideti,}
+		\textit{apobefideti.} {\footnotesize (From Dan. \ipa{apo + bideti}).} v. to divide, to separate.
+	
+
 	
 		\key{apoluketis.} {\footnotesize (From Dan. \ipa{apolúketor}).} f.
 			\textbf{1.} appearance, the way in which something seems.
@@ -2083,7 +2087,7 @@
 	
 
 	
-		\key{Edém.} {\footnotesize (From Gr. \gr{Εδέμ}).} m. Eden, Garden of Eden.
+		\key{Edém.} {\footnotesize (From AG \gr{Εδέμ}).} m. Eden, Garden of Eden.
 	
 
 	
@@ -3076,6 +3080,10 @@
 
 	
 		\key{Jovis.}  m. Jove, Jupiter (the god).
+	
+
+	
+		\key{jugeti.} {\footnotesize (From Dan. \ipa{jugos}).} v. to yoke.
 	
 
 	
@@ -4132,6 +4140,10 @@
 		\key{opíti.} {\footnotesize (From Dan. \ipa{opi} and \ipa{iti}).} v. to come.
 	
 
+	
+		\key{opjugeti.} {\footnotesize (From Dan. \ipa{opi + jugeti}).} v. to join together, to gather together.
+	
+
 	\key{ops,}
 		\textit{opes.} {\footnotesize (From PIE \ipa{*h₃ókʷs}).} n. eye.
 	
@@ -4234,6 +4246,10 @@
 
 	
 		\key{paráda.} {\footnotesize (From Fr. \ipa{parade}).} f. parade.
+	
+
+	
+		\key{paradísos.}  m. paradise.
 	
 
 	
@@ -5005,6 +5021,10 @@
 
 	
 		\key{samariom.}  n.{\footnotesize \textit{ chemistry.}} samarium.
+	
+
+	
+		\key{samenjeti.} {\footnotesize (From Dan. \ipa{seman}).} v. to plant.
 	
 
 	
