modified:   content.latex modified:   dictionary.latex modified:   dictionary.pdf

--- a/dictionary/content.latex
+++ b/dictionary/content.latex
@@ -20,7 +20,7 @@
 	
 
 	
-		\key{Abrahám.} {\footnotesize (From Lat. \ipa{Ābrahām}).} m. Abraham.
+		\key{Abrahám.} {\footnotesize (From Lat. \ipa{Ābrahām}).} m.{\footnotesize \textit{ personal name.}} Abraham.
 	
 
 	
@@ -40,7 +40,7 @@
 	
 
 	
-		\key{Adám.} {\footnotesize (From AG \gr{Ᾱ̓δᾱ́μ}).} m. Adam.
+		\key{Adám.} {\footnotesize (From AG \gr{Ᾱ̓δᾱ́μ}).} m.{\footnotesize \textit{ personal name.}} Adam.
 	
 
 	
@@ -340,7 +340,7 @@
 	
 
 	
-		\key{Alexandros.} {\footnotesize (From AG \gr{Ἀλέξανδρος}).} m. Alexander, Alejandro.
+		\key{Alexandros.} {\footnotesize (From AG \gr{Ἀλέξανδρος}).} m.{\footnotesize \textit{ personal name.}} Alexander, Alejandro.
 	
 
 	\key{alfit,}
@@ -554,8 +554,8 @@
 
 	
 		\key{Andréa.} {\footnotesize (From AG \gr{Ἀνδρέᾱς}).} m.
-			\textbf{1.} Andrew, André, Andrés. f.
-			\textbf{2.} Andrea.
+			\textbf{1.}{\footnotesize \textit{ personal name.}} Andrew, André, Andrés. f.
+			\textbf{2.}{\footnotesize \textit{ personal name.}} Andrea.
 	
 
 	
@@ -679,7 +679,7 @@
 	
 
 	
-		\key{Antonios.} {\footnotesize (From Lat. \ipa{Antonius}).} m. Anthony.
+		\key{Antonios.} {\footnotesize (From Lat. \ipa{Antonius}).} m.{\footnotesize \textit{ personal name.}} Anthony.
 	
 
 	
@@ -1193,7 +1193,7 @@
 	
 
 	
-		\key{Benjamín.} {\footnotesize (From AG \gr{Βενιᾱμῑ́ν}).} m. Benjamin.
+		\key{Benjamín.} {\footnotesize (From AG \gr{Βενιᾱμῑ́ν}).} m.{\footnotesize \textit{ personal name.}} Benjamin.
 	
 
 	\key{bentis,}
@@ -1385,7 +1385,7 @@
 	
 
 	
-		\key{Braján.} {\footnotesize (From En. \ipa{Brian}).} m. Brian, Bryan.
+		\key{Braján.} {\footnotesize (From En. \ipa{Brian}).} m.{\footnotesize \textit{ personal name.}} Brian, Bryan.
 	
 
 	
@@ -1531,7 +1531,7 @@
 	
 
 	
-		\key{Carlos.} {\footnotesize (From PG \ipa{*karlaz}).} m. Charles, Carlos.
+		\key{Carlos.} {\footnotesize (From PG \ipa{*karlaz}).} m.{\footnotesize \textit{ personal name.}} Charles, Carlos.
 	
 
 	
@@ -1565,7 +1565,7 @@
 	
 
 	
-		\key{Christophoros.} {\footnotesize (From AG \gr{Χρῑστόφορος}).} m. Christopher.
+		\key{Christophoros.} {\footnotesize (From AG \gr{Χρῑστόφορος}).} m.{\footnotesize \textit{ personal name.}} Christopher.
 	
 
 	
@@ -1628,7 +1628,7 @@
 	
 
 	
-		\key{Condrados.} {\footnotesize (Related to Ger. \ipa{Konrad}).} m. Conrad, Konrad.
+		\key{Condrados.} {\footnotesize (Related to Ger. \ipa{Konrad}).} m.{\footnotesize \textit{ personal name.}} Conrad, Konrad.
 	
 
 	
@@ -1722,7 +1722,7 @@
 	
 
 	
-		\key{Daniel.} {\footnotesize (From AG \gr{Δᾱνῑήλ}).} m. Daniel.
+		\key{Daniel.} {\footnotesize (From AG \gr{Δᾱνῑήλ}).} m.{\footnotesize \textit{ personal name.}} Daniel.
 	
 
 	
@@ -1756,7 +1756,7 @@
 	
 
 	
-		\key{David.} {\footnotesize (From AG \gr{Δαυῑ́δ}).} m. David.
+		\key{David.} {\footnotesize (From AG \gr{Δαυῑ́δ}).} m.{\footnotesize \textit{ personal name.}} David.
 	
 
 	
@@ -1786,7 +1786,7 @@
 	
 
 	
-		\key{Demetrios.} {\footnotesize (From AG \gr{Δημήτριος}).} m. Demetrius, Dimitri, Dmitri.
+		\key{Demetrios.} {\footnotesize (From AG \gr{Δημήτριος}).} m.{\footnotesize \textit{ personal name.}} Demetrius, Dimitri, Dmitri.
 	
 
 	\key{denaman,}
@@ -1935,7 +1935,7 @@
 	
 
 	
-		\key{Donald.} {\footnotesize (From En. \ipa{Donald}).} m. Donald.
+		\key{Donald.} {\footnotesize (From En. \ipa{Donald}).} m.{\footnotesize \textit{ personal name.}} Donald.
 	
 
 	
@@ -2091,7 +2091,7 @@
 	
 
 	
-		\key{Edvardos.} {\footnotesize (Ultimately from PG \ipa{*Audawarduz}).} m. Edward, Eduardo.
+		\key{Edvardos.} {\footnotesize (Ultimately from PG \ipa{*Audawarduz}).} m.{\footnotesize \textit{ personal name.}} Edward, Eduardo.
 	
 
 	
@@ -2236,11 +2236,11 @@
 	
 
 	
-		\key{Erik.} {\footnotesize (Ultimately from PG \ipa{*Aizarīkijaz}).} m. Eric, Erik.
+		\key{Erik.} {\footnotesize (Ultimately from PG \ipa{*Aizarīkijaz}).} m.{\footnotesize \textit{ personal name.}} Eric, Erik.
 	
 
 	
-		\key{Ernéstos.} {\footnotesize (From Ger. \ipa{Ernst}, influenced by Sp. \ipa{Ernesto}).} m. Ernesto, Ernst, Ernest.
+		\key{Ernéstos.} {\footnotesize (From Ger. \ipa{Ernst}, influenced by Sp. \ipa{Ernesto}).} m.{\footnotesize \textit{ personal name.}} Ernesto, Ernst, Ernest.
 	
 
 	
@@ -2463,7 +2463,7 @@
 	
 
 	
-		\key{Frederik.} {\footnotesize (From PG \ipa{*Friþurīks}).} m. Frederic, Frederick, Frederik, Friedrich, Federico, Frederico.
+		\key{Frederik.} {\footnotesize (From PG \ipa{*Friþurīks}).} m.{\footnotesize \textit{ personal name.}} Frederic, Frederick, Frederik, Friedrich, Federico, Frederico.
 	
 
 	
@@ -2600,7 +2600,7 @@
 	
 
 	
-		\key{Georgios.} {\footnotesize (From AG \gr{Γεώργῐος}).} m. George, Jorge.
+		\key{Georgios.} {\footnotesize (From AG \gr{Γεώργῐος}).} m.{\footnotesize \textit{ personal name.}} George, Jorge.
 	
 
 	\key{gerán,}
@@ -2628,7 +2628,7 @@
 	
 
 	
-		\key{Glen.} {\footnotesize (From En. \ipa{Glen}).} m. Glen, Glenn.
+		\key{Glen.} {\footnotesize (From En. \ipa{Glen}).} m.{\footnotesize \textit{ personal name.}} Glen, Glenn.
 	
 
 	
@@ -2660,7 +2660,7 @@
 	
 
 	
-		\key{Gregorios.} {\footnotesize (From AG \gr{Γρηγόριος}).} m. Gregory.
+		\key{Gregorios.} {\footnotesize (From AG \gr{Γρηγόριος}).} m.{\footnotesize \textit{ personal name.}} Gregory.
 	
 
 	
@@ -2692,7 +2692,7 @@
 	
 
 	
-		\key{Hadriános.} {\footnotesize (From Lat. \ipa{Hadriānus}).} m. Adrian, Hadrian.
+		\key{Hadriános.} {\footnotesize (From Lat. \ipa{Hadriānus}).} m.{\footnotesize \textit{ personal name.}} Adrian, Hadrian.
 	
 
 	
@@ -2726,7 +2726,7 @@
 	
 
 	
-		\key{Hendrik.} {\footnotesize (Ultimately from PG \ipa{*Haimarīks}).} m. Henry, Henrik, Henri, Heinrich, Enrique, Enrico.
+		\key{Hendrik.} {\footnotesize (Ultimately from PG \ipa{*Haimarīks}).} m.{\footnotesize \textit{ personal name.}} Henry, Henrik, Henri, Heinrich, Enrique, Enrico.
 	
 
 	
@@ -2950,7 +2950,7 @@
 	
 
 	
-		\key{Jacobos.} {\footnotesize (From Lat. \ipa{Jacōbus}).} m. Jacob, James, Jacques.
+		\key{Jacobos.} {\footnotesize (From Lat. \ipa{Jacōbus}).} m.{\footnotesize \textit{ personal name.}} Jacob, James, Jacques.
 	
 
 	
@@ -2974,7 +2974,7 @@
 	
 
 	
-		\key{Jasón.} {\footnotesize (From AG \gr{Ἰάσων}).} m. Jason.
+		\key{Jasón.} {\footnotesize (From AG \gr{Ἰάσων}).} m.{\footnotesize \textit{ personal name.}} Jason.
 	
 
 	
@@ -2994,7 +2994,7 @@
 	
 
 	
-		\key{Jesus.} {\footnotesize (From AG \gr{Ἰησοῦς}).} m. Jesus, Joshua.
+		\key{Jesus.} {\footnotesize (From AG \gr{Ἰησοῦς}).} m.{\footnotesize \textit{ personal name.}} Jesus, Joshua.
 	
 
 	
@@ -3008,7 +3008,7 @@
 	
 
 	
-		\key{Joánna.} {\footnotesize (From AG \gr{Ἰωάννης}).} m. John.
+		\key{Joánna.} {\footnotesize (From AG \gr{Ἰωάννης}).} m.{\footnotesize \textit{ personal name.}} John.
 	
 
 	
@@ -3037,7 +3037,7 @@
 	
 
 	
-		\key{Jonathán.} {\footnotesize (From AG \gr{Ἰωνάθαν}).} m. Jonathan.
+		\key{Jonathán.} {\footnotesize (From AG \gr{Ἰωνάθαν}).} m.{\footnotesize \textit{ personal name.}} Jonathan.
 	
 
 	
@@ -3053,7 +3053,7 @@
 	
 
 	
-		\key{Josephos.} {\footnotesize (From Lat. \ipa{Iōsēphus}).} m. Joseph, José.
+		\key{Josephos.} {\footnotesize (From Lat. \ipa{Iōsēphus}).} m.{\footnotesize \textit{ personal name.}} Joseph, José.
 	
 
 	
@@ -3069,7 +3069,7 @@
 	
 
 	
-		\key{Jotfredos.} {\footnotesize (Ultimately from PG \ipa{*Gautafriþuz}).} m. Jeffrey, Geoffrey, Jauffre, Gaufredo, Gottfried.
+		\key{Jotfredos.} {\footnotesize (Ultimately from PG \ipa{*Gautafriþuz}).} m.{\footnotesize \textit{ personal name.}} Jeffrey, Geoffrey, Jauffre, Gaufredo, Gottfried.
 	
 
 	
@@ -3129,7 +3129,7 @@
 	
 
 	
-		\key{Justínos.} {\footnotesize (From Lat. \ipa{Iūstīnus}).} m. Justin.
+		\key{Justínos.} {\footnotesize (From Lat. \ipa{Iūstīnus}).} m.{\footnotesize \textit{ personal name.}} Justin.
 	
 
 	
@@ -3275,7 +3275,7 @@
 	
 
 	
-		\key{Laurentios.} {\footnotesize (From Lat. \ipa{Laurentius}).} m. Lawrence, Laurence, Lorenzo, Laurent.
+		\key{Laurentios.} {\footnotesize (From Lat. \ipa{Laurentius}).} m.{\footnotesize \textit{ personal name.}} Lawrence, Laurence, Lorenzo, Laurent.
 	
 
 	
@@ -3453,7 +3453,7 @@
 	
 
 	
-		\key{Marcos.} {\footnotesize (From Lat. \ipa{Marcus}).} m. Mark.
+		\key{Marcos.} {\footnotesize (From Lat. \ipa{Marcus}).} m.{\footnotesize \textit{ personal name.}} Mark.
 	
 
 	
@@ -3497,11 +3497,11 @@
 	
 
 	
-		\key{Matthaios.} {\footnotesize (From AG \gr{Ματθαῖος}).} m. Matthew.
+		\key{Matthaios.} {\footnotesize (From AG \gr{Ματθαῖος}).} m.{\footnotesize \textit{ personal name.}} Matthew.
 	
 
 	
-		\key{Mauritios.} {\footnotesize (From Lat. \ipa{Mauritius}).} m. Maurice, Mauricio, Mauritius.
+		\key{Mauritios.} {\footnotesize (From Lat. \ipa{Mauritius}).} m.{\footnotesize \textit{ personal name.}} Maurice, Mauricio, Mauritius.
 	
 
 	
@@ -3601,7 +3601,7 @@
 	
 
 	
-		\key{Michael.} {\footnotesize (From AG \gr{Μῐχᾱήλ}).} m. Michael.
+		\key{Michael.} {\footnotesize (From AG \gr{Μῐχᾱήλ}).} m.{\footnotesize \textit{ personal name.}} Michael.
 	
 
 	
@@ -3853,7 +3853,7 @@
 	
 
 	
-		\key{Nicola.} {\footnotesize (Ultimately from AG \gr{Νῑκόλᾱος}).} m. Nicholas, Nikola, Nikolai.
+		\key{Nicola.} {\footnotesize (Ultimately from AG \gr{Νῑκόλᾱος}).} m.{\footnotesize \textit{ personal name.}} Nicholas, Nikola, Nikolai.
 	
 
 	
@@ -3865,7 +3865,7 @@
 	
 
 	
-		\key{Nils.} {\footnotesize (From Danish \ipa{Niels}).} m. Niels.
+		\key{Nils.} {\footnotesize (From Danish \ipa{Niels}).} m.{\footnotesize \textit{ personal name.}} Niels.
 	
 
 	
@@ -4277,7 +4277,7 @@
 	
 
 	
-		\key{Paulos.} {\footnotesize (From Lat. \ipa{Paulus}).} m. Paul.
+		\key{Paulos.} {\footnotesize (From Lat. \ipa{Paulus}).} m.{\footnotesize \textit{ personal name.}} Paul.
 	
 
 	
@@ -4423,7 +4423,7 @@
 	
 
 	
-		\key{Petros.} {\footnotesize (From AG \gr{Πέτρος}).} m. Peter, Pedro.
+		\key{Petros.} {\footnotesize (From AG \gr{Πέτρος}).} m.{\footnotesize \textit{ personal name.}} Peter, Pedro.
 	
 
 	
@@ -4455,7 +4455,7 @@
 	
 
 	
-		\key{Philippos.} {\footnotesize (From AG \gr{Φῐ́λῐππος}).} m. Philip, Felipe.
+		\key{Philippos.} {\footnotesize (From AG \gr{Φῐ́λῐππος}).} m.{\footnotesize \textit{ personal name.}} Philip, Felipe.
 	
 
 	
@@ -4829,11 +4829,11 @@
 	
 
 	
-		\key{Raimondos.} {\footnotesize (Equivalent to En. and Fr. \ipa{Raymond}).} m. Raymond, Ramón.
+		\key{Raimondos.} {\footnotesize (Equivalent to En. and Fr. \ipa{Raymond}).} m.{\footnotesize \textit{ personal name.}} Raymond, Ramón.
 	
 
 	
-		\key{Raján.} {\footnotesize (From En. \ipa{Ryan}).} m. Ryan.
+		\key{Raján.} {\footnotesize (From En. \ipa{Ryan}).} m.{\footnotesize \textit{ personal name.}} Ryan.
 	
 
 	
@@ -4865,7 +4865,7 @@
 	
 
 	
-		\key{Renvaldos.} {\footnotesize (Ultimately from PG \ipa{*Raginawaldaz}).} m. Ronald, Reginald, Reynold, Reinhold.
+		\key{Renvaldos.} {\footnotesize (Ultimately from PG \ipa{*Raginawaldaz}).} m.{\footnotesize \textit{ personal name.}} Ronald, Reginald, Reynold, Reinhold.
 	
 
 	
@@ -4897,7 +4897,7 @@
 	
 
 	
-		\key{Richardos.} {\footnotesize (From Lat. \ipa{Richardus}).} m. Richard, Ricardo.
+		\key{Richardos.} {\footnotesize (From Lat. \ipa{Richardus}).} m.{\footnotesize \textit{ personal name.}} Richard, Ricardo.
 	
 
 	
@@ -4909,7 +4909,7 @@
 	
 
 	
-		\key{Robértos.} {\footnotesize (From Lat. \ipa{Robertus}).} m. Robert.
+		\key{Robértos.} {\footnotesize (From Lat. \ipa{Robertus}).} m.{\footnotesize \textit{ personal name.}} Robert.
 	
 
 	
@@ -5028,7 +5028,7 @@
 	
 
 	
-		\key{Samuel.} {\footnotesize (From AG \gr{Σαμουήλ}).} m. Samuel.
+		\key{Samuel.} {\footnotesize (From AG \gr{Σαμουήλ}).} m.{\footnotesize \textit{ personal name.}} Samuel.
 	
 
 	
@@ -5556,7 +5556,7 @@
 	
 
 	
-		\key{Stephanos.} {\footnotesize (From AG \gr{Στέφανος}).} m. Steven, Stephen, Stephanus.
+		\key{Stephanos.} {\footnotesize (From AG \gr{Στέφανος}).} m.{\footnotesize \textit{ personal name.}} Steven, Stephen, Stephanus.
 	
 
 	
@@ -5812,7 +5812,7 @@
 	
 
 	
-		\key{Theodoros.} {\footnotesize (From AG \gr{Θεόδωρος}).} m. Theodore.
+		\key{Theodoros.} {\footnotesize (From AG \gr{Θεόδωρος}).} m.{\footnotesize \textit{ personal name.}} Theodore.
 	
 
 	
@@ -5836,7 +5836,7 @@
 	
 
 	
-		\key{Thoma.} {\footnotesize (From AG \gr{Θωμᾶς}).} m. Thomas.
+		\key{Thoma.} {\footnotesize (From AG \gr{Θωμᾶς}).} m.{\footnotesize \textit{ personal name.}} Thomas.
 	
 
 	
@@ -5852,7 +5852,7 @@
 	
 
 	
-		\key{Timotheos.} {\footnotesize (From AG \gr{Τῑμόθεος}).} m. Timothy.
+		\key{Timotheos.} {\footnotesize (From AG \gr{Τῑμόθεος}).} m.{\footnotesize \textit{ personal name.}} Timothy.
 	
 
 	
@@ -6285,7 +6285,7 @@
 	
 
 	
-		\key{Vilmos.} {\footnotesize (Ultimately from PG \ipa{*Wiljahelmaz}).} m. William, Wilhelm, Guillermo, Guillaume.
+		\key{Vilmos.} {\footnotesize (Ultimately from PG \ipa{*Wiljahelmaz}).} m.{\footnotesize \textit{ personal name.}} William, Wilhelm, Guillermo, Guillaume.
 	
 
 	
@@ -6410,7 +6410,7 @@
 	
 
 	
-		\key{Werner.} {\footnotesize (From Ger. \ipa{Werner}).} m. Werner, Warner.
+		\key{Werner.} {\footnotesize (From Ger. \ipa{Werner}).} m.{\footnotesize \textit{ personal name.}} Werner, Warner.
 	
 
 	
@@ -6422,7 +6422,7 @@
 	
 
 	
-		\key{Xavier.} {\footnotesize (From Basque \ipa{etxeberria}).} m. Javier, Xavier, Saverio.
+		\key{Xavier.} {\footnotesize (From Basque \ipa{etxeberria}).} m.{\footnotesize \textit{ personal name.}} Javier, Xavier, Saverio.
 	
 
 	
