modified:   grammar/Makefile modified:   grammar/grammar.latex modified:   grammar/grammar.pdf renamed:    grammar/verbs/fekmi.yaml -> grammar/verbs/fekti.yaml

--- a/grammar/grammar.latex
+++ b/grammar/grammar.latex
@@ -2162,7 +2162,7 @@ numbers.
 \input{compiled/doti.table}
 \input{compiled/esti-be.table}
 \input{compiled/esti-eat.table}
-\input{compiled/fekmi.table}
+\input{compiled/fekti.table}
 \input{compiled/iti.table}
 \input{compiled/jekti.table}
 \input{compiled/linepti.table}
