modified:   dictionary/content.latex modified:   dictionary/dictionary.pdf modified:   dictionary/words.yaml

--- a/dictionary/content.latex
+++ b/dictionary/content.latex
@@ -717,6 +717,16 @@
 	
 
 	
+		\key{apománjetor.} {\footnotesize (From Dan. \ipa{apo + mánjetor}).} v. to dispute; to disagree; to argue.
+	
+
+	
+		\key{aposlabjeti.} {\footnotesize (From Dan. \ipa{apo + slabjeti}).} v.
+			\textbf{1.} to take away something.
+			\textbf{2.} to take off something.
+	
+
+	
 		\key{aprilis.} {\footnotesize (From Lat. \ipa{Aprīlis}).} m.{\footnotesize \textit{ month.}} April.
 	
 
@@ -913,6 +923,10 @@
 
 	
 		\key{atistati.} {\footnotesize (From Dan. \ipa{ati- + stati}).} v. to stop, to cease.
+	
+
+	
+		\key{atistatis.} {\footnotesize (From Dan. \ipa{atistati}).} f. delay, wait.
 	
 
 	
@@ -1296,6 +1310,10 @@
 
 	
 		\key{bivos.} {\footnotesize (From PIE \ipa{*gʷih₃wós}).} adj. alive, living.
+	
+
+	
+		\key{blajeti.}  v. to blow.
 	
 
 	
@@ -1730,6 +1748,10 @@
 	
 
 	
+		\key{danóti.}  v. to recognize.
+	
+
+	
 		\key{danu.} {\footnotesize (From PIE \ipa{*déh₂nu}).} n. river.
 	
 
@@ -1976,6 +1998,10 @@
 
 	\key{doru,}
 		\textit{dreves, drumos.} {\footnotesize (From PIE \ipa{*dóru}).} n. tree.
+	
+
+	
+		\key{doti.}  v. to give.
 	
 
 	\key{dotis,}
@@ -3649,6 +3675,10 @@
 	
 
 	
+		\key{moktis.}  f. ability.
+	
+
+	
 		\key{Moldavia.} {\footnotesize (From Rus. \cyr{Молда́вия}).} f. Moldova, Moldavia, Moldovia.
 	
 
@@ -4373,6 +4403,14 @@
 	
 
 	
+		\key{perislíeti.} {\footnotesize (From Dan. \ipa{perislitos}).} v. to wrap.
+	
+
+	
+		\key{perislitos.} {\footnotesize (From Dan. \ipa{peri + slitos}).} adj. wrapped.
+	
+
+	
 		\key{Perkunos.} {\footnotesize (From PIE \ipa{*perkʷunos}).} m. Danetian god of thunder.
 	
 
@@ -4774,6 +4812,12 @@
 
 	
 		\key{protiaerios.}  m. anti-aircraft.
+	
+
+	
+		\key{protidoti.} {\footnotesize (From Dan. \ipa{proti + doti}).} v.
+			\textbf{1.} to surrender something (active).
+			\textbf{2.} to give up, to surrender (passive).
 	
 
 	
@@ -5388,6 +5432,10 @@
 	
 
 	
+		\key{sománjetor.} {\footnotesize (From Dan. \ipa{som + mánjetor}).} v. to agree.
+	
+
+	
 		\key{somblesnos.} {\footnotesize (From Dan. \ipa{som + blesnos}).} m. seduction, temptation.
 	
 
@@ -5725,6 +5773,10 @@
 
 	
 		\key{tantos.} {\footnotesize (From PIE \ipa{*tn̥tós}).} adj. stretched, extended.
+	
+
+	
+		\key{tarmeni.} {\footnotesize (From Dan. \ipa{terman}).} adv. finally, at last; eventually, after a long time; in conclusion.
 	
 
 	
