new file:   anthem.md modified:   dictionary/content.latex modified:   dictionary/dictionary.pdf modified:   dictionary/words.yaml modified:   grammar/grammar.latex modified:   grammar/grammar.pdf modified:   grammar/verbs/doti.yaml new file:   troparion.md

--- a/dictionary/content.latex
+++ b/dictionary/content.latex
@@ -1229,6 +1229,12 @@
 	
 
 	
+		\key{berheti.} {\footnotesize (From PIE \ipa{*bʰérgʰ-(e)-ti}).} v.
+			\textbf{1.} to guard, to protect.
+			\textbf{2.} to preserve.
+	
+
+	
 		\key{berkeliom.}  n.{\footnotesize \textit{ chemistry.}} berkelium.
 	
 
@@ -3215,6 +3221,10 @@
 	
 
 	
+		\key{katvíeti.} {\footnotesize (From Dan. \ipa{kotus}).} v. to fight.
+	
+
+	
 		\key{Kazachstán.} {\footnotesize (From Rus. \cyr{Казахста́н}).} m. Kazakhstan.
 	
 
@@ -4299,6 +4309,12 @@
 	
 
 	
+		\key{pasti.}  v.
+			\textbf{1.} to guard, to protect.
+			\textbf{2.} to shepherd.
+	
+
+	
 		\key{pater.} {\footnotesize (From PIE \ipa{*ph₂tḗr}).} m. father.
 	
 
@@ -4821,6 +4837,10 @@
 	
 
 	
+		\key{protinjos.} {\footnotesize (From Dan. \ipa{proti}).} m. adversary, opponent.
+	
+
+	
 		\key{protislabjeti.} {\footnotesize (From Dan. \ipa{slabyeti}).} v. to understand, to comprehend.
 	
 
@@ -4829,7 +4849,7 @@
 	
 
 	
-		\key{psycha.} {\footnotesize (From AG \ipa{ψῡχή}).} f. soul.
+		\key{psycha.} {\footnotesize (From AG \gr{ψῡχή}).} f. soul.
 	
 
 	
@@ -4917,7 +4937,9 @@
 	
 
 	
-		\key{restos.} {\footnotesize (From PIE \ipa{*h₃reǵtós}).} adj. straightened, right, upright.
+		\key{restos.} {\footnotesize (From PIE \ipa{*h₃reǵtós}).} adj.
+			\textbf{1.} straightened, right, upright.
+			\textbf{2.} correct.
 	
 
 	
@@ -5306,7 +5328,9 @@
 	
 
 	
-		\key{slevos.} {\footnotesize (From PIE \ipa{*ḱléwos}).} n. fame.
+		\key{slevos.} {\footnotesize (From PIE \ipa{*ḱléwos}).} n.
+			\textbf{1.} fame.
+			\textbf{2.} glory.
 	
 
 	
@@ -5462,6 +5486,10 @@
 	
 
 	
+		\key{sompasti.} {\footnotesize (From Dan. \ipa{pasti}).} v. to save.
+	
+
+	
 		\key{sondenés.} {\footnotesize (From Dan. \ipa{som + denos}).} adj. related.
 	
 
@@ -5589,6 +5617,10 @@
 
 	
 		\key{statos.} {\footnotesize (From PIE \ipa{*sth₂tós}).} adj. placed, standing.
+	
+
+	
+		\key{stauros.} {\footnotesize (From AG \gr{σταυρός}).} m. cross.
 	
 
 	
